--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
   Do you blieve in global warming?:<br>
   <input type="text" name="do you believe in global warming?"><br>
   
-    https://studio.code.org/projects/applab/4wpF47SZcCdbpkx7gPnUY8coUIXTlg_YblCCuoTcuJQ 
+    <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VFJ2Z7-AFJmiR65w1H0vLt7kS_U-BUI02jInw06IH1s/embed?nosource"></iframe>
 </form>
 </body>
 </html>
