--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <html>
 <head>
 <body> 
+  <h1>Im EIleen and this is my final app</h1> 
+  
+  <h1> this is one of my projects i did in class: </h1>
   <h1>Glabal Warming is Real</h1>
  <th>By Eileen</th>
     <th>Ertas</th>
@@ -55,7 +58,9 @@
   Do you blieve in global warming?:<br>
   <input type="text" name="do you believe in global warming?"><br>
   
+    <h1> This is my game: </h1>
     <iframe width="380" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/VFJ2Z7-AFJmiR65w1H0vLt7kS_U-BUI02jInw06IH1s/embed?nosource"></iframe>
+    
 </form>
 </body>
 </html>
