--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
 <body> 
-  <h1>Im EIleen and this is my final app</h1> 
+  <h1>Im Eileen and this is my final app</h1> 
   
   <h1> this is one of my projects i did in class: </h1>
   <h1>Glabal Warming is Real</h1>
